--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </section>
     <div class="container">
         <div class="text-center">
-            <a type="button" href="#checkout" class="btn cs-bg-color btn-outline-primary text-white mt-5 sticky ">SHOP NOW</a>
+            <a type="button" href="#checkout" class="btn cs-bg-color btn-outline-primary text-white sticky">SHOP NOW</a>
     <!-- end why section  -->
 
     <!--start featured in section -->
